--- a/tests/VanguardWizard.Tests/VanguardWizard.Tests.csproj
+++ b/tests/VanguardWizard.Tests/VanguardWizard.Tests.csproj
@@ -38,10 +38,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Vanguard.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentAssertions, Version=4.19.4.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
@@ -67,7 +68,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Vanguard.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\tools\VanguardWizard\VanguardWizard.csproj">
